Creating components and quality systems V0  - Only for securing the process.

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "laravel/lumen-framework": "5.5.*",
         "vlucas/phpdotenv": "~2.2",
         "kalnoy/nestedset": "^4.3",
-        "barryvdh/laravel-cors": "^0.9.3"
+        "barryvdh/laravel-cors": "^0.9.3",
+        "illuminate/routing": "^5.5",
+        "guzzlehttp/guzzle": "^6.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
